[package]
name = "didp-parser"
version = "0.1.0"
authors = ["RK <mhgeoe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "2.0"
fixedbitset = "0.4.1"
num-traits = "0.2"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.4"
