[package]
name = "didp-search"
version = "0.1.0"
authors = ["RK <mhgeoe@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "3.0.0"
fixedbitset = "0.4.1"
didp-parser = { path = "../didp-parser" }
rustc-hash = "1.1.0"
yaml-rust = "0.4.5"