[package]
name = "didp-yaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dypdl = { path = "../dypdl" }
dypdl-heuristic-search = { path = "../dypdl-heuristic-search" }
rustc-hash = "1.1"
yaml-rust = "0.4"
linked-hash-map = "0.5"
num-traits = "0.2"
lazy_static = "1.4"
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"