[package]
name = "didp-yaml"
version = "0.7.2"
edition = "2021"
rust-version = "1.65"
description = "YAML interface for Dynamic Programming Description Language (DyPDL) and DyPDL solvers."
license = "MIT OR Apache-2.0"
authors = ["Ryo Kuroiwa <ryo.kuroiwa@mail.utoronto.ca>"]
homepage = "https://didp.ai"
repository = "https://github.com/domain-independent-dp/didp-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dypdl = { path = "../dypdl", version = "0.7.2" }
dypdl-heuristic-search = { path = "../dypdl-heuristic-search", version = "0.7.2" }
rustc-hash = "1.1"
yaml-rust = "0.4"
linked-hash-map = "0.5"
num-traits = "0.2"
lazy_static = "1.4"
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
