[package]
name = "dypdl"
version = "0.3.0"
edition = "2021"
description = "Libarary for Dynamic Programming Description Language (DyPDL)."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "3.0"
fixedbitset = "0.4"
approx = "0.5"
num-traits = "0.2"
rustc-hash = "1.1"