[package]
name = "dypdl"
version = "0.6.0"
edition = "2021"
rust-version = "1.65"
description = "Libarary for Dynamic Programming Description Language (DyPDL)."
license = "MIT OR Apache-2.0"
authors = ["Ryo Kuroiwa <ryo.kuroiwa@mail.utoronto.ca>"]
homepage = "https://didp.ai"
repository = "https://github.com/domain-independent-dp/didp-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "3.7"
fixedbitset = "0.4"
approx = "0.5"
num-traits = "0.2"
rustc-hash = "1.1"
